# booking

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule  docker-compose.yaml  grafana-dashboard.json  pyproject.toml
app/: config.py  conftest.py  database.py  exceptions.py  load_data.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py  service.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/images/: dao.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 6ba8da61d1a8_initial.py  947c165595c4_delete_image_id_from_hotels.py  a1d33748258f_add_model_hotel_images.py
app/pages/: router.py
app/tasks/: celery_setup.py  email_templates.py  scheduled.py  tasks.py
app/templates/: base.html  hotels.html
app/templates/auth/: login.html  register.html
app/templates/bookings/: booking_successful.html  bookings.html
app/templates/hotels_and_rooms/: hotels.html  rooms.html
app/tests/: conftest.py  mock_hotelimages.json
app/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
app/tests/integration_tests/test_hotels/: test_api.py
app/tests/integration_tests/test_users/: test_api.py
app/tests/unit_tests/test_users/: test_dao.py
app/users/: auth.py  dependencies.py  models.py  router.py
docker_compose/: app.yaml
