[tool.poetry]
name = "booking"
version = "0.1.0"
description = ""
authors = ["Maksym Sydorchuk <maximsidorchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "0.112.0"
uvicorn = "0.30.5"
sqlalchemy = "2.0.31"
alembic = "1.13.2"
asyncpg = "0.29.0"
python-jose = "3.3.0"
passlib = "1.7.4"
email-validator = "2.2.0"
pydantic-settings = "2.4.0"
fastapi-cache2 = {extras = ["redis"], version = "0.2.2"}
python-json-logger = "2.0.7"
fastapi-versioning = "0.10.0"
greenlet = "3.0.3"
jinja2 = "3.1.4"
python-multipart = "0.0.9"
celery = "5.4.0"
flower = "2.0.1"
pillow = "10.4.0"
sqladmin = "0.19.0"
itsdangerous = "2.2.0"
pytest = "8.3.3"
httpx = "0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
